syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bookstore.catalog.grpc";
option java_outer_classname = "CatalogServiceProto";

service CatalogService {
    rpc GetBookById(GetBookRequest) returns (BookResponse);
    rpc DecreaseStock(DecreaseStockRequest) returns (StockUpdateResponse);
    rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
}

message GetBookRequest {
    int64 bookId = 1;
}

message DecreaseStockRequest {
    int64 bookId = 1;
    int32 quantity = 2;
}

message CheckStockRequest {
    int64 bookId = 1;
    int32 requestedQuantity = 2;
}

message BookResponse {
    int64 id = 1;
    string title = 2;
    string author = 3;
    string description = 4;
    int32 stock = 5;
    double price = 6;
}

message StockUpdateResponse {
    bool success = 1;
    string message = 2;
}

message CheckStockResponse {
    bool available = 1;
    int32 stock = 2;
    string message = 3;
}